# fenestra

./: .gitignore  Cargo.toml  Configuration.md  README.md  WinBinding.md  fenestra.conf
.github/workflows/: build.yml  release.yml  rust.yml
src/: hook_control.rs  hooks.rs  main.rs
src/actions/: groups.rs  mod.rs
src/actions/windows/: close.rs  focus.rs  mod.rs  move.rs
src/actions/workspaces/: focus.rs  mod.rs  move.rs
src/config/: load.rs  mod.rs  parse.rs  write.rs
src/data/: action.rs  application.rs  config.rs  group.rs  hook.rs  key.rs  mod.rs  monitor.rs  state.rs  window.rs  workspace.rs
src/data/common/: axis.rs  direction.rs  event.rs  mod.rs  state.rs
src/hook_control/: hook_keyboard.rs  mod.rs
src/hooks/: hook_keyboard.rs  keyboard.rs  mod.rs  window.rs
src/state/: init.rs  mod.rs  monitor.rs  state_manager.rs  validation.rs
src/state/init/: mod.rs  monitors.rs  workspace.rs
src/state/management/: action_manager.rs  group_manager.rs  key_manager.rs  mod.rs  monitor_manager.rs  state_manager.rs  window_manager.rs  workspace_manager.rs
src/util/: mod.rs
src/util/windows/: focus.rs
src/win_api/: hook.rs  keyboard.rs  misc.rs  mod.rs  monitor.rs  window.rs
src/window_control/: mod.rs
src/windows/: mod.rs
