[package]
name = "fenestra"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
log = "0.4.21"
env_logger = "0.11.3"

[dependencies.windows]
version = "0.54.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "System",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_StationsAndDesktops"
]